Replace PsiCollection with MultiResult
Signed-off-by: stefvanschie <stefvanschiedev@gmail.com>